ShowGrantOwner: service no longer needed